phpadmin4slave/deploy-admin-bdd-as.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: admin-bdd-as-slave
  namespace: thierry-space
  labels:
    app: admin-bdd-as-slave
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: admin-bdd-as-slave
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin
          ports:
          - name: http
            containerPort: 80
