phpadmin4slave/ingress-phpmyadmin.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: admin-bdd-as-slave
  namespace: thierry-space
  annotations:
    kubernetes.io/ingress.class: "tectonic"
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/use-port-in-redirects: "true"
spec:
  rules:
    - host: adminbddas2
      http:
        paths:
          - path: /
            backend:
              serviceName: admin-bdd-as-slave
              servicePort: 80
